[tool.poetry]
name = "pydration"
version = "0.1.0"
description = "A simple Python dependency injection (DI) framework"
authors = ["Travis Rasor <travis@thathanka.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.8"
mypy = "^1.11.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
